fix auto filter status=approved fix response entity
